--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,23 @@
         <selenium.version>3.141.59</selenium.version>
         <testng.version>7.4.0</testng.version>
         <webdrivermanager.version>4.4.1</webdrivermanager.version>
+        <suiteXmlFile>src/test/resources/smoke.xml</suiteXmlFile>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
