--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <testng.version>7.4.0</testng.version>
         <webdrivermanager.version>4.4.1</webdrivermanager.version>
         <suiteXmlFile>src/test/resources/smoke.xml</suiteXmlFile>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <build>
         <plugins>
